# learn_pytorch

./: .gitignore  CMakeLists.txt  classify_by_transfer_learning.py  compute_f1.py  export_to_onnx.py  load_weight_save_model.py  model.param  onnx_to_ncnn.ps1  plot_scripted_tensor_transforms.py  run_test.ps1  run_wu.ps1  test_onnx_ncnn.cpp  test_predict_image.py  verify_predicts.py  wuSNet_test.cpp
test_albumentations/: classify_cats_dogs.py  simple_image augmentation.py  simple_image augmentation_simplified.py
test_cleanlab/: test_cleanlab.py  test_cleanlab_dummy_data.py
test_cutpaste/: automation_pytorch_config_oc.ini  cutpaste.py  cutpaste_A.py  cutpaste_A_cv.py  data_threshold.txt  dataset.py  dataset_cv.py  dataset_winding.py  demo_numpy_c.cpp  eighth_onnx_ncnn_oc.cpp  eval.py  eval_A_plus_shufflenet_v2.py  eval_A_plus_shufflenet_v2_cv.py  eval_shufflenet_v2.py  eval_winding.py  first_oc_classify_by_transfer_learning_shufflenet_v2_augmentation.py  model_winding.py  onnx_to_ncnn_shufflenet_v2_oc.ps1  onnx_to_ncnn_shufflenet_v2_oc.ps1.bak  onnx_to_ncnn_shufflenet_v2_one_class.ps1  run_eighth_oc.ps1  run_training.py  run_training_A.py  run_training_A_plus_shufflenet_v2.py  run_training_A_plus_shufflenet_v2_cv.py  run_training_A_shufflenet_v2.py  run_training_winding.py  run_training_winding_test.py  second_find_best_model_oc.py  test_crop.py  test_numpy_c.py  third_numpy_c.py
test_cutpaste/templates/: first_classify_by_transfer_learning_shufflenet_v2_augmentation.py  first_classify_by_transfer_learning_shufflenet_v2_augmentation_one_class.py  onnx_to_ncnn_shufflenet_v2.ps1  run_demo.ps1  second_find_best_model.py  second_find_best_model_one_class.py
test_fastai/: start_virtual_env.txt  test_fastai.py
test_pyimagesearch/classify_pretrained/: classify_image.py
test_pyimagesearch/training_predict/: predict.py  train.py
test_pyimagesearch/training_predict_holy/: third_export_to_onnx_shufflenet_v2.py  train.py
test_pyimagesearch/training_predict_holy/pyimagesearch/: lenet.py  shufflenetv2_pytorch.py
test_pytorch_to_ncnn/: onnx_to_ncnn.ps1.bak  pytorch_to_onnx.py  verify_pytorch_ncnn.cpp  verify_pytorch_ncnn_holy.cpp  verify_pytorch_onnx.py
test_shufflenet_v2/: eighth_onnx_ncnn.cpp  eighth_onnx_ncnn_bak.cpp  eighth_onnx_ncnn_one_class.cpp  fifth_onnx_to_ncnn_shufflenet_v2.ps1  first_classify_by_transfer_learning_shufflenet_v2.py  first_classify_by_transfer_learning_shufflenet_v2_augmentation.py  first_classify_by_transfer_learning_shufflenet_v2_augmentation_one_class.py  fourth_verify_pytorch_onnx_shufflenet_v2.py  fourth_verify_pytorch_onnx_shufflenet_v2_one_class.py  run_eighth.ps1  run_eighth_one_class.ps1  second_load_weight_save_model_shufflenet_v2.py  seventh_compute_f1.py  seventh_compute_f1_one_class.py  shufflenetv2_pytorch.py  test_shufflenet_v2.py  third_export_to_onnx_shufflenet_v2.py  verify_pytorch_ncnn_shufflenet_v2.cpp
